Implement the prototype of packer